--- a/index.html
+++ b/index.html
@@ -1,13 +1,153 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Название вашей страницы</title>
+<!-- saved from url=(0022)https://start.mfua.ru/ -->
+<html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=360, initial-scale=1, shrink-to-fit=no, maximum-scale=1">
+    <meta name="format-detection" content="telephone=no">
+
+    <link href="./Добрый день!_files/css" rel="stylesheet">
+    <link rel="stylesheet" href="./Добрый день!_files/vendors.css">
+    <link rel="stylesheet" href="./Добрый день!_files/main.css">
+
+    <title>
+        Добрый день!    </title>
+    
+<script type="text/javascript" async="" src="./Добрый день!_files/ba.js.Без названия"></script><script type="text/javascript">var _ba = _ba || []; _ba.push(["aid", "e5a44ed4202efc03b901341d070a10ec"]); _ba.push(["host", "start.mfua.ru"]); (function() {var ba = document.createElement("script"); ba.type = "text/javascript"; ba.async = true;ba.src = (document.location.protocol == "https:" ? "https://" : "http://") + "bitrix.info/ba.js";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ba, s);})();</script>
+
+
 </head>
 <body>
-    <!-- Здесь будет ваш основной контент -->
-    <h1>Привет, мир!</h1>
-    <p>Это первый абзац на моей странице.</p>
-    <a href="https://example.com">Это ссылка</a>
-</body>
-</html>
+<main>
+
+    <picture class="page-background">
+        <source srcset="/upload/iblock/5be/f27qx9boiaw2881ypqqlb4egvoy34a3h.jpg" media="(min-width: 1440px)">
+        <source srcset="/upload/iblock/d03/63egbfwt8gzhk5nu6sliruz58ik1bgg0.jpg" media="(min-width: 1080px)">
+        <source srcset="/upload/iblock/03b/l111l834ob2w0q7l4kj4svlf8fhpu13s.jpg" media="(min-width: 768px)">
+        <source srcset="/upload/iblock/5cf/aqupkl08gw57st5sxfvhhlwtgv8xxrrs.jpg" media="(min-width: 320px)">
+        <img class="page-background__image" src="./Добрый день!_files/f27qx9boiaw2881ypqqlb4egvoy34a3h.jpg" alt="Фоновая картинка">
+    </picture>
+
+<div class="content">
+    <header class="header">
+        <div class="container">
+            <h1 class="header__title">
+                Добрый день!            </h1>
+            <div class="header__datetime">
+                <span class="header__date">08 сентября 2025</span>
+                <span>Понедельник, <span class="js-timer">10:46</span></span>
+            </div>
+        </div>
+    </header>
+
+        <div class="navigation content__section">
+        <div class="container">
+            <div class="swiper navigation__slider js-navigation-swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
+                <div class="swiper-wrapper">
+                                            <div class="swiper-slide navigation__slide swiper-slide-active">
+                                                             <a href="https://mfua24.ru/" class="navigation__card navigation__card--lg nav-card filter-blur" id="bx_129739569_15">
+                                                                            <span class="nav-card__icon" style="background-color: #FFFFFF;
+                                                  background-image: url(&#39;/upload/iblock/2a2/hmnj4ez39rsrwatefz055r94cj746bgb.svg&#39;);"></span>
+                                                                        <div class="nav-card__content">
+                                        <div class="nav-card__name">МФЮА 24</div>
+                                                                            </div>
+                                </a>
+                                                             <a href="https://portal.mfua.ru/" class="navigation__card navigation__card--gor-md nav-card filter-blur" id="bx_129739569_11">
+                                                                            <span class="nav-card__icon" style="background-color: #0942D6;
+                                                  background-image: url(&#39;/upload/iblock/7e4/rk7pbxi84o348pt1721bq5f9p9xc8qg7.svg&#39;);"></span>
+                                                                        <div class="nav-card__content">
+                                        <div class="nav-card__name">Личный кабинет</div>
+                                                                                    <div>Официальный портал</div>
+                                                                            </div>
+                                </a>
+                                                             <a href="http://is4.mfua.ru/dashboard.ivp/list" class="navigation__card navigation__card--sm nav-card filter-blur" id="bx_129739569_12">
+                                                                            <span class="nav-card__icon" style="background-color: #63B9BA;
+                                                  background-image: url(&#39;/upload/iblock/c97/3ia2smv9l6jc0z70abbxdycfo0tr2apo.svg&#39;);"></span>
+                                                                        <div class="nav-card__content">
+                                        <div class="nav-card__name">HelpDesk</div>
+                                                                                    <div>Технический помощник</div>
+                                                                            </div>
+                                </a>
+                                                             <a href="https://moi.mfua.ru/login/index.php" class="navigation__card navigation__card--sm nav-card filter-blur" id="bx_129739569_13">
+                                                                            <span class="nav-card__icon" style="background-color: #F05C44;
+                                                  background-image: url(&#39;/upload/iblock/c2e/073j9dyse0cusxhbh9letns7avdyipni.svg&#39;);"></span>
+                                                                        <div class="nav-card__content">
+                                        <div class="nav-card__name">Moodle</div>
+                                                                                    <div>Дистанционное обучение</div>
+                                                                            </div>
+                                </a>
+                                                             <a href="https://mail.mfua.ru/" class="navigation__card navigation__card--lg nav-card filter-blur" id="bx_129739569_14">
+                                                                            <span class="nav-card__icon" style="background-color: #FECC50;
+                                                  background-image: url(&#39;/upload/iblock/746/tyoln1kfge22ccspgdr1z9u50p5keu4o.svg&#39;);"></span>
+                                                                        <div class="nav-card__content">
+                                        <div class="nav-card__name">Почта</div>
+                                                                            </div>
+                                </a>
+                                                     </div>
+                                    </div>
+            </div>
+        </div>
+            </div>
+
+        <section class="links">
+        <div class="container">
+            <h2 class="links__title">
+                полезные ссылки
+            </h2>
+            <ul class="links__list">
+                                     <li class="links__item filter-blur" id="bx_1891408807_29">
+                        <a class="links__link" href="https://www.mfua.ru/">
+                            Сайт МФЮА                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_30">
+                        <a class="links__link" href="https://masi.ru/">
+                            Сайт МАСИ                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_24">
+                        <a class="links__link" href="https://mfui.ru/">
+                            МФЮИ                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_31">
+                        <a class="links__link" href="https://kwu.org/">
+                            Key West University                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_27">
+                        <a class="links__link" href="https://preuni.mfua.ru/">
+                            Школа «Наукоград»                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_28">
+                        <a class="links__link" href="https://artstart-masi.ru/">
+                            Школа ArtStart                         </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_25">
+                        <a class="links__link" href="https://naukograd.mfua.ru/">
+                            Технопарк МФЮА-МАСИ                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_23">
+                        <a class="links__link" href="https://mbamfua.ru/">
+                            Бизнес-школа МФЮА                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_21">
+                        <a class="links__link" href="https://www.idomfua.ru/">
+                            Институт дополнительного образования                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_22">
+                        <a class="links__link" href="https://do.mfua.ru/">
+                            Институт заочного обучения                        </a>
+                    </li>
+                                     <li class="links__item filter-blur" id="bx_1891408807_26">
+                        <a class="links__link" href="https://museum.mfua.ru/">
+                            Музей «Наука, техника, искусство»                        </a>
+                    </li>
+                             </ul>
+        </div>
+    </section>
+</div>
+</main>
+
+<script src="./Добрый день!_files/runtime.js.Без названия"></script>
+<script src="./Добрый день!_files/vendors.js.Без названия"></script>
+<script src="./Добрый день!_files/main.js.Без названия"></script>
+
+
+
+</body></html>
