--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="text-7xl py-3">3blan Client</div>
                     <div class="text-2xl p-3 text-gray-300">Революцеонный мод-клиент для майнкрафта!</div>
                     <div class="text-lg p-3 text-gray-400"> DoomsDay is a multifunctional modification for Minecraft with many useful utilities. (like ghost client) <br>Поддержка версии 1.21 Fabric!<br> </div>
-                </div> <button onclick="showModal()" class="opacity-95 bg-blue-700 text-white border border-transparent font-semibold shadow-lg shadow-indigo-500/40 px-12 py-4 rounded-full transition-all duration-100 hover:bg-blue-600"> КУПИТЬ </button>
+                </div> <button onclick="location.href='https://playerok.com/profile/SpleIII'" class="opacity-95 bg-blue-700 text-white border border-transparent font-semibold shadow-lg shadow-indigo-500/40 px-12 py-4 rounded-full transition-all duration-100 hover:bg-blue-600"> КУПИТЬ </button>
             </div>
         </div>
     </div>
